--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "pyqt6 (>=6.10.0,<7.0.0)",
+    "ocrmypdf (>=16.12.0,<17.0.0)",
 ]
 
 [tool.poetry]
