--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pdf-manager-gui = "pdf_manager_gui.__main__:main"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.12.0"
+mypy = "^1.19.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
